--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -1,1 +1,311 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Promiscuous Plaything – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #025939;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0 20px;
+      border: 5px solid #e1bf78;
+      box-sizing: border-box;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      text-shadow: 0 0 5px #5affb6, 0 0 10px #5affb6;
+      margin-bottom: 20px;
+    }
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #b4ffde;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #8affcc;
+      margin-bottom: 40px;
+    }
+    .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
+    h2 {
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    .sub {
+      margin-left: 1.4rem;
+      font-style: italic;
+      color: #c7c7c7;
+      list-style: none;
+      padding-left: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>Promiscuous Plaything</h1>
+  <p class="slogan">Get ready for a wild ride</p>
+  <p class="quote">“Sex is part of nature. I go along with nature.” – Marilyn Monroe</p>
 
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/promiscuous_plaything_female.jpg" alt="Female Promiscuous Plaything">
+    </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/promiscuous_plaything_male.jpg" alt="Male Promiscuous Plaything">
+    </div>
+  </div>
+
+  <h2>Description</h2>
+  <p>You’re not ashamed of craving attention. You love being watched, wanted, and maybe even worshipped. For you, sex isn’t something to hide—it’s a performance, a thrill, a pulse-racing spectacle of sensation and spontaneity. But what most people miss is that you’re not just craving stimulation. You’re chasing the emotional thrill behind it. You want to feel wanted. You want to feel alive. And when someone can match that energy—when they can keep up with your tempo and play back—you light up like nothing else.</p>
+  <h2>Power Dynamic Arc</h2>
+  <p><strong>Relationship Trajectory:</strong> Promiscuous Playthings are adventurous submissives. Their desire is built around attention, intensity, and the emotional thrill of being wanted. They’re turned on by the chase—but they only submit to partners who truly see and value them.</p>
+  <p><strong>Polarity Shift Graph:</strong></p>
+  <ul>
+    <li>Submissive stays playful with responsive partner → 🔥 Spark builds fast</li>
+    <li><span class="sub">Flirting, teasing, and touch escalate arousal quickly</span></li>
+    <li>Partner gets jealous or controlling → 😬 Craving drops</li>
+    <li><span class="sub">Feeling owned is hot; feeling caged is not</span></li>
+    <li>Partner withdraws emotionally → 📉 Performance energy fades</li>
+    <li><span class="sub">Without feedback or attention, desire flatlines</span></li>
+    <li>Partner matches their energy and feeds the game → 💥 Submission offered</li>
+    <li><span class="sub">They give in fully when they feel desired, not judged</span></li>
+  </ul>
+
+  <h2>Ideal Dynamic:</h2>
+  <p>They thrive with partners who love the spotlight just as much—or who love putting them in it. These Playthings come alive when their pleasure feels like a show, a gift, and a game all at once. The best partners don’t try to tame them. They play with them. And they never make them feel ashamed for craving more.</p>
+
+  <h2>Origins of Desire</h2>
+  <p>Promiscuous Playthings often developed their erotic style as a way of reclaiming visibility. Whether they grew up overlooked or hypersexualized, they learned how to turn attention into agency. Being watched makes them feel wanted. Being desired makes them feel safe. And sex, for them, is where they can finally turn the volume all the way up.</p>
+
+  <p><strong>Theoretical Explanations:</strong></p>
+  <ul>
+    <li><strong>Attachment Theory:</strong> They may have experienced hot-and-cold affection growing up, making them attuned to fluctuations in desire. When someone is fully focused on them, they feel emotionally secure.</li>
+    <li><strong>Imprintation Theory:</strong> Early exposure to voyeuristic, dramatic, or transgressive sexual cues may have anchored arousal to visibility and attention.</li>
+    <li><strong>Mirror Theory:</strong> Their sexuality is deeply responsive. They come alive when they’re being seen, touched, and adored—not just physically, but energetically.</li>
+    <li><strong>Self-Authorization Theory:</strong> Many learned to eroticize taboo as a way of taking back control. By performing desire on their own terms, they reclaim power over how they’re perceived.</li>
+    <li><strong>Sensation-Seeking Theory:</strong> Their brains may be wired for novelty, arousal, and peak experiences—meaning sex that’s too slow, safe, or private can feel unsatisfying.</li>
+  </ul>
+
+  <h2>Turn-On Vocabulary</h2>
+  <p>These phrases light them up like neon:</p>
+  <ul>
+    <li>“You’re such a tease”</li>
+    <li>“You look so good when you give in”</li>
+    <li>“Everyone wishes they were me right now”</li>
+    <li>“I love showing you off”</li>
+    <li>“Beg a little louder, baby”</li>
+    <li>“You’re such a prize”</li>
+    <li>“You’re mine tonight, and everyone knows it”</li>
+    <li>“Keep your eyes on me”</li>
+    <li>“You were made to be watched”</li>
+    <li>“Show me how much you want it”</li>
+  </ul>
+
+  <h2>Conflict Pattern</h2>
+  <p><strong>Tendencies During Conflict:</strong></p>
+  <ul>
+    <li>Deflects emotional vulnerability by being flirty or playful</li>
+    <li>May seek sexual attention instead of discussing emotional needs</li>
+    <li>Can lash out if they feel ignored, neglected, or invisible</li>
+    <li>Sometimes creates drama just to feel intensity</li>
+  </ul>
+
+  <p><strong>Triggers:</strong></p>
+  <ul>
+    <li>Feeling unwanted or taken for granted</li>
+    <li>Partners who become emotionally unavailable or critical</li>
+    <li>Being told they’re “too much,” “too sexual,” or “attention-seeking”</li>
+    <li>Partners who judge or shame their erotic style</li>
+  </ul>
+
+  <p><strong>Resolution Style:</strong></p>
+  <ul>
+    <li>Needs validation that they’re still desired and exciting</li>
+    <li>Conflict is often resolved through attention, intimacy, and re-sparking desire</li>
+    <li>Responds well to playful reassurance and physical closeness</li>
+    <li>Breakthroughs happen when their eroticism is honored, not pathologized</li>
+  </ul>
+
+  <p><strong>Growth Edge:</strong></p>
+  <ul>
+    <li>Learning to ask for emotional needs directly</li>
+    <li>Understanding that they are desirable even in stillness</li>
+    <li>Letting themselves be loved without needing to perform</li>
+  </ul>
+
+  <h2>Erotic Edge & Drop</h2>
+  <p><strong>Erotic Edge:</strong> Promiscuous Playthings are electric. They make their partners feel desired, wanted, and turned on by how openly they crave. Their submission is a performance of pleasure, and it’s intoxicating. Their gift is how much they give to the moment. They don’t hold back—and their partners feel it.</p>
+  <p><strong>Erotic Drop (Dealbreaker):</strong> Feeling judged, shamed, or reduced to a stereotype. If their partner stops giving them attention—or mocks the way they ask for it—they’ll feel unsafe and unwanted, and shut down fast. They only bloom when their boldness is met with admiration.</p>
+      <!-- Erotic Short Story -->
+    <div class="content-section">
+      <h2>Erotic Short Story</h2>
+
+      <p>You shouldn’t be here. You know that.</p>
+      <p>But that’s part of the thrill, isn’t it?</p>
+
+      <p>It started hours ago. A party you barely wanted to attend, a rooftop gathering pulsing with thrumming music and cold drinks and lots of strangers who can’t take their eyes off you.</p>
+
+      <p>You weren’t looking for anything. You just liked the breeze on your skin, the rush of being admired, even from a distance. You had on your favorite outfit. Not for anyone else. For you. You liked the way it made you walk a little differently. The way it invited attention.</p>
+
+      <p>That’s when you felt it.</p>
+
+      <p><em>Eyes.</em></p>
+
+      <p>You turned your head just enough to catch them. Leaning on the far wall. Drink in hand. Watching you. Not in a predatory way. Not even flirtatious.</p>
+
+      <p>Curious. Interested. Steady.</p>
+
+      <p>They didn’t look away.</p>
+
+      <p>Neither did you.</p>
+
+      <p>You knew from that first glance that they wouldn’t chase you. Not unless you made it clear you wanted to be chased.</p>
+
+      <p>So you did what you do best.</p>
+
+      <p>A few stolen glances. A stretch of the arms. A long sip from your glass that gave them time to admire your mouth.</p>
+
+      <p>You moved like you weren’t performing.</p>
+
+      <p>But every step, every sway, was deliberate.</p>
+
+      <p>And it worked.</p>
+
+      <p>You turned again and they were right there. Closer now. Still not touching. Just present. Solid.</p>
+
+      <p>“You look like you’re trying to get into trouble,” they said, their voice smooth and unbothered.</p>
+
+      <p>You smiled. “And if I am?”</p>
+
+      <p>They tilted their head. “Depends what kind of trouble you want.”</p>
+
+      <p>The way they said it didn’t feel rehearsed. It felt easy. Like they weren’t trying to seduce you. Like they already knew they didn’t need to.</p>
+
+      <p>You liked that.</p>
+
+      <p>You liked the way they made you feel wanted without needing to beg for it. Like your flirtation wasn’t a performance to impress them but an invitation they were more than happy to accept.</p>
+
+      <p>That’s how you ended up here.</p>
+
+      <p>Back at their place.</p>
+
+      <p>Their hand at the small of your back as they opened the door. Their voice low as they told you to come inside. The quiet click of the lock behind you.</p>
+
+      <p>You should be nervous. But you’re not. Your pulse is quick, but not from fear. From anticipation.</p>
+
+      <p><strong>From wanting.</strong></p>
+
+      <p>They pour you a drink. They hand it to you without comment. Their eyes hold yours as you take a sip.</p>
+
+      <p>“You always put on a show like that?” they ask.</p>
+
+      <p>“Maybe, why—do you like?”</p>
+
+      <p>They chuckle. “Yeah, I like this front-row seat.”</p>
+
+      <p>You take another sip. “I knew you liked the view.”</p>
+
+      <p>They walk toward you slowly. Not prowling. Not pouncing. Just closing the distance with intent.</p>
+
+      <p>You hold your ground.</p>
+
+      <p>You like being wanted. You like being watched. You like knowing you’ve been chosen not just because you’re hot, but because you’re captivating.</p>
+
+      <p>They stop just short of touching you.</p>
+
+      <p>“I want to see how far you’ll let me go,” they say.</p>
+
+      <p>You tilt your chin. “Then stop talking and find out.”</p>
+
+      <p>Their hand finds your waist. Their touch is light at first—testing, reading your breath. Then firmer.</p>
+
+      <p>They step in, pressing you gently back against the nearest wall. One arm braces beside your head, the other slides up the curve of your side.</p>
+
+      <p>“You like this?” they ask.</p>
+
+      <p>Your voice catches. “Yes.”</p>
+
+      <p>They smile.</p>
+
+      <p>“You like being watched.”</p>
+
+      <p>You nod.</p>
+
+      <p>“You like giving people something to want.”</p>
+
+      <p>You exhale. “Yes.”</p>
+
+      <p>Their mouth brushes your neck. “Then let me take you on a wild ride.”</p>
+
+      <p>They kiss you—deep, un-rushed—claiming your mouth in a way that makes your knees soften and your hands curl into their shirt.</p>
+
+      <p>They taste like heat. Like the buildup of every gaze you traded, every breath you held while waiting to be touched.</p>
+
+      <p>They pull back just enough to speak. “Strip for me.”</p>
+
+      <p>It isn’t barked. It isn’t a command. It’s a <em>gift</em>.</p>
+
+      <p>You start slow—hands lifting your shirt inch by inch, letting the hunger build.</p>
+
+      <p>Finally bare, pulse thrumming everywhere, you step forward. Their eyes trace every inch of you—awed, reverent.</p>
+
+      <p>“Come here,” they say, voice lower now. “Let me touch what everyone else only dreams about.”</p>
+
+      <p>You let them explore with fingertips and tongue, savoring every gasp and tremor they draw from you.</p>
+
+      <p>When they slide fingers inside, your hips meet their rhythm, needing it—until climax rolls through you like a wave, stealing your voice, unlocking every sound you’d held back.</p>
+
+      <p>They stay close, holding you through the aftershocks. “You’re mine tonight,” they whisper before kissing you breathless once more.</p>
+
+      <p>Later, tangled and glowing, they murmur, “I knew you’d be amazing in bed.”</p>
+
+      <p>You smirk against their chest. “Was I?”</p>
+
+      <p>“Better than I even imagined.”</p>
+
+      <p>You sigh, feeling wanted—chosen—controlled—exactly how you like it.</p>
+    </div>
+    </body>
+</html>
