--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
     body {
-      background-color: #025939;
+      background-color: #06954E;
       font-family: 'Montserrat', sans-serif;
       color: white;
       margin: 0;
