--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -104,13 +104,13 @@
   <p><strong>Polarity Shift Graph:</strong></p>
   <ul>
     <li>Submissive stays playful with responsive partner → 🔥 Spark builds fast</li>
-    <li><span class="sub">Flirting, teasing, and touch escalate arousal quickly</span></li>
+    <li><sub">Flirting, teasing, and touch escalate arousal quickly</sub></li>
     <li>Partner gets jealous or controlling → 😬 Craving drops</li>
-    <li><span class="sub">Feeling owned is hot; feeling caged is not</span></li>
+    <li><sub>Feeling owned is hot; feeling caged is not</sub></li>
     <li>Partner withdraws emotionally → 📉 Performance energy fades</li>
-    <li><span class="sub">Without feedback or attention, desire flatlines</span></li>
+    <li><sub>Without feedback or attention, desire flatlines</sub></li>
     <li>Partner matches their energy and feeds the game → 💥 Submission offered</li>
-    <li><span class="sub">They give in fully when they feel desired, not judged</span></li>
+    <li><sub>They give in fully when they feel desired, not judged</sub></li>
   </ul>
 
   <h2>Ideal Dynamic:</h2>
