--- a/premium/erotic-blueprint_devoted_darling.html
+++ b/premium/erotic-blueprint_devoted_darling.html
@@ -105,13 +105,13 @@
   <p><strong>Polarity Shift Graph:</strong></p>
   <ul>
     <li>Submissive stays submissive with attuned dominant → 📈 Steady rise</li>
-    <li><sub>Intimacy, loyalty, and passion deepen over time</sub></li>
+    <li class="sub">Intimacy, loyalty, and passion deepen over time</li>
     <li>Partner becomes emotionally absent → 📉 Slow decline</li>
-    <li><sub>Darling stays loyal, but becomes anxious and undernourished</sub></li>
+    <li class="sub">Darling stays loyal, but becomes anxious and undernourished</li>
     <li>Darling forced into leadership role → 🚨 Critical drop</li>
-    <li><sub>They may adjust and take the lead, but the dynamic becomes emotionally unsustainable</sub></li>
+    <li class="sub">They may adjust and take the lead, but the dynamic becomes emotionally unsustainable</li>
     <li>Partner tests their limits too harshly → ⚠️ Polarity rupture</li>
-    <li><sub>Devoted Darling loses trust and emotional openness</sub></li>
+    <li class="sub">Devoted Darling loses trust and emotional openness</li>
   </ul>
     <h2>Ideal Dynamic:</h2>
   <p>They thrive in relationships where the dominant leads with warmth, steadiness, and earned authority. Devoted Darlings bloom under consistent, loving direction, not chaos, volatility, or apathy. Their loyalty intensifies when they are gently guided.</p>
