--- a/premium/erotic-blueprint_promiscuous_plaything.html
+++ b/premium/erotic-blueprint_promiscuous_plaything.html
@@ -25,6 +25,7 @@
       font-style: italic;
       text-shadow: 0 0 3px #5affb6, 0 0 3px #5affb6;
       margin-bottom: 20px;
+      font-size: 36px;
     }
     .slogan {
       text-align: center;
