--- a/premium/erotic-blueprint_generous_giver.html
+++ b/premium/erotic-blueprint_generous_giver.html
@@ -1,1 +1,262 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Generous Giver – Erotic Blueprint</title>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      background-color: #06954E;
+      font-family: 'Montserrat', sans-serif;
+      color: white;
+      margin: 0;
+      padding: 0 20px;
+      border: 5px solid #e1bf78;
+      box-sizing: border-box;
+    }
+    .logo {
+      max-width: 120px;
+      margin: 40px auto 20px;
+      display: block;
+    }
+    h1 {
+      text-align: center;
+      font-style: italic;
+      text-shadow: 0 0 3px #5affb6, 0 0 3px #5affb6;
+      margin-bottom: 20px;
+    }
+    .slogan {
+      text-align: center;
+      font-style: italic;
+      color: #b4ffde;
+      margin-top: 10px;
+    }
+    .quote {
+      text-align: center;
+      font-style: italic;
+      color: #8affcc;
+      margin-bottom: 40px;
+    }
+    .image-container {
+      border: 4px solid #e1bf78;
+      border-radius: 12px;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: stretch;
+      width: 100%;
+      max-width: 700px;
+      margin: 0 auto 30px auto;
+    }
+    .image-half {
+      flex: 1;
+    }
+    .image-half img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      pointer-events: none;
+      user-select: none;
+    }
+    .divider {
+      width: 4px;
+      background-color: #e1bf78;
+    }
+    h2 {
+      font-style: italic;
+      color: #e1bf78;
+      margin-top: 40px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    .sub {
+      margin-left: 1.4rem;
+      font-style: italic;
+      color: #c7c7c7;
+      list-style: none;
+      padding-left: 1rem;
+    }
+  </style>
+</head>
+<body>
+  <img src="/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo">
+  <h1>Generous Giver</h1>
+  <p class="slogan">You have so much to give, you just need someone to give it to</p>
+  <p class="quote">“Love has nothing to do with what you are expecting to get—only with what you are expecting to give—which is everything.” – Katharine Hepburn</p>
 
+  <div class="image-container">
+    <div class="image-half">
+      <img src="/images/generous_giver_female.jpg" alt="Female Generous Giver">
+    </div>
+    <div class="divider"></div>
+    <div class="image-half">
+      <img src="/images/generous_giver_male.jpg" alt="Male Generous Giver">
+    </div>
+  </div>
+
+  <h2>Description</h2>
+<p>You feel most alive when you’re tuning into someone else. Giving isn’t a performance, it’s a connection ritual. Whether you’re leading or letting go, your goal is reciprocity. This is a textbook case of mutual responsive intimacy, a flexible erotic role based on emotional availability, not control. </p>
+  <h2>Power Dynamic Arc</h2>
+  <p><strong>Relationship Trajectory:</strong> Generous Givers are responsive and flexible. Their polarity is not fixed, they flow with what their partner needs, and find arousal in giving pleasure rather than holding control. The relationship arc depends on mutual receptivity. If their partner gives back emotionally, the connection thrives. If not, it tilts toward imbalance.
+</p>
+  <p><strong>Polarity Shift Graph:</strong></p>
+  <ul>
+    <li>Giver stays flexible with attuned partner → 📈 Steady upward trend</li>
+    <li class="sub">Mutual pleasure and adaptability fuel emotional intimacy</li>
+    <li>Giver defaults into one-sided submission → 📉 Downward drift</li>
+    <li class="sub">Begins to feel unseen, overextended, or used</li>
+    <li>Giver attempts dominance without internal desire → ⚠️ Sharp dip</li>
+    <li class="sub">Connection feels inauthentic or forced</li>
+    <li>Giver engages a partner who mirrors their generosity → 📊 Stabilizing recovery</li>
+    <li class="sub">Feedback loop of shared giving and receiving</li>
+  </ul>
+<p><strong>Ideal Dynamic:</strong> The most fulfilling relationships for a Generous Giver involve a partner who takes pleasure in their pleasure. They crave lovers who receive with gratitude and give with emotional presence. The polarity doesn’t need to be fixed, it just needs to feel mutual and alive.</p>
+  </div>
+    <div class="content-section">
+    <h2>Origins of Desire</h2>
+  <p>Generous Givers often developed their erotic identity by becoming emotionally attuned early on. Whether they were praised for being “good,” “selfless,” or “thoughtful,” their desire became rooted in caretaking. But that doesn’t mean they’re doormats. In fact, they’re at their hottest when their efforts are truly seen and valued. The right partner helps them feel safe giving without losing themselves.</p>
+
+  <p><strong>Theoretical Explanations:</strong></p>
+  <ul>
+    <li><strong>Attachment Theory:</strong> Many Givers formed anxious-preoccupied bonds, leading them to seek validation by pleasing. But secure connections unlock their sensual confidence and co-creative energy.</li>
+    <li><strong>Mirror Theory:</strong> Their pleasure is responsive. They light up when someone reflects desire back at them—not just sexually, but emotionally.</li>
+    <li><strong>Blank Slate Theory:</strong> They were conditioned to believe love is earned by giving. Early family or cultural messages may have reinforced that care equals worth. As adults, giving becomes their erotic language.</li>
+    <li><strong>Self-Esteem Theory:</strong> They feel most confident when their efforts are acknowledged. Being received deeply boosts their sense of value. Their turn-on is tied to the appreciation they evoke.</li>
+    <li><strong>Mimetic Desire Theory:</strong> They learned what was desirable by watching others receive affection through acts of service or generosity. They eroticized giving by watching it succeed.</li>
+    <li><strong>Exposure Therapy Theory:</strong> Some may have had early experiences where their needs were unmet. Erotic giving becomes a way to reclaim control over intimacy, to give what they wish they had received.</li>
+    <li><strong>Evolutionary Biological Theory:</strong> From a survival standpoint, being a responsive partner improves long-term bonding. Their instincts reinforce behavior that strengthens pair-bonding through generosity.</li>
+  </ul>
+
+  <h2>Turn-On Vocabulary</h2>
+  <p>These phrases help them feel wanted, appreciated, and safe to give more:</p>
+  <ul>
+    <li>“You’re incredible at reading me”</li>
+    <li>“Let me take care of you too”</li>
+    <li>“I love how in tune you are with me”</li>
+    <li>“Everything you do turns me on”</li>
+    <li>“Thank you for all of this”</li>
+    <li>“I feel so seen when I’m with you”</li>
+    <li>“I want to give you just as much as you give me”</li>
+    <li>“You give so much. I see it.”</li>
+    <li>“I want to know what you need tonight”</li>
+    <li>“Come here and let me spoil you”</li>
+  </ul>
+
+  <h2>Conflict Pattern</h2>
+  <p><strong>Tendencies During Conflict:</strong></p>
+  <ul>
+    <li>Suppresses their own needs to keep the peace</li>
+    <li>Over-functions or over-apologizes</li>
+    <li>May become resentful if giving goes unreciprocated</li>
+    <li>Withholds intimacy when feeling unseen or unappreciated</li>
+  </ul>
+
+  <p><strong>Triggers:</strong></p>
+  <ul>
+    <li>Feeling taken for granted or ignored</li>
+    <li>Receiving thoughtless or dismissive feedback</li>
+    <li>Partners who receive but never reciprocate</li>
+    <li>Being told their care is “too much” or unwanted</li>
+  </ul>
+
+  <p><strong>Resolution Style:</strong></p>
+  <ul>
+    <li>Needs reassurance that their efforts are seen and wanted</li>
+    <li>Heals best through tender, verbal validation and reciprocity</li>
+    <li>Sex as reconnection works only when emotional needs are met first</li>
+    <li>Grows through direct communication and mutual generosity</li>
+  </ul>
+
+  <p><strong>Growth Edge:</strong></p>
+  <ul>
+    <li>Learning to name their own needs instead of only reading others’</li>
+    <li>Setting boundaries without guilt</li>
+    <li>Asking for what they need instead of waiting to be offered it</li>
+  </ul>
+</div>
+  <div class="content-section">
+    <h2>Erotic Edge & Drop</h2>
+    <p><strong>Erotic Edge:</strong> Their gift is responsive eroticism, the way they track subtle shifts in breath, sound, and tension, and tailor every move to amplify their partner’s pleasure. They’re like erotic symphony conductors. What makes them unforgettable is how present and attuned they are. They eroticize devotion.
+Their superpower is empathic dominance.</p>
+    <p><strong>Erotic Drop (Dealbreaker):</strong> Nothing kills their desire faster than selfishness or disinterest. If their generosity is consumed without gratitude, they grow cold. If they feel like a service instead of a partner, they begin to shut down.
+</p>
+  </div>
+
+     <h2>Erotic Short Story</h2>
+    <p>The pop-up gallery is half art show, half mixer. Soft beats thump from a corner speaker. People hold tiny cans of sparkling wine and talk about brushstrokes like they understand them.</p>
+    <p>You stand near a back wall, pretending to study an abstract piece that looks like spilled coffee. Really, you are scanning the crowd. You like watching faces move from polite to intrigued. You like the quick flicker of interest when two sets of eyes stick.</p>
+    <p>That flicker finds you.</p>
+    <p>They hover three steps away, pretending to inspect a neon sculpture. They do a lazy double-take, sip their drink, give you a half smile. A test: will you bite?</p>
+    <p>You do.</p>
+    <p>You step closer. “You like it?” You nod at the coffee splatter painting and say, “Well, it’s interesting.”</p>
+    <p>They smirk and shrug. “So you hate it?”</p>
+    <p>You blush, surprised by how they’re so forward and straight to the point. Starting to gain the courage to be honest and tell them what you’re truly thinking. “It’s not my favorite.”</p>
+    <p>They smile, “Looks like an accident the curator couldn’t clean up.” Their voice is warm, charming. Confident without flexing. “What do you think?”</p>
+    <p>“I think it looks a little like someone played in the mud," you say.</p>
+    <p>They grin. “What, you don’t like to get dirty?”</p>
+    <p>You sense a shift, but you don’t want to give in, not quite yet.</p>
+    <p>You respond in a way that shows them that you’re interested but not easy. “Depends on if I’m with the right person.”</p>
+    <p>You make extra deep eye contact and then add in some levity. “But it really does look like overpriced mud, does it not?”</p>
+    <p>A surprised smile grows on their face. “Finally, someone honest.”</p>
+    <p>You clink your can against theirs. “Tell me something else honest.”</p>
+    <p>“I saw you the second you walked in.” A pause. “Now be honest with me, did this mud painting get you in the mood for some dirty talk or was it just me?”</p>
+    <p>“That was pretty smooth,” you admit.</p>
+    <p>“It sounded better in my head, but if you say so.” You laugh, but only a little.</p>
+    <p>They nod toward the exit. “Want to find a quieter room?”</p>
+    <p>You glance around. The gallery buzzes with bored chatter. A quieter room sounds perfect.</p>
+    <p>You tip your can back, finish the drink, drop it in a bin. “Lead the way.”</p>
+    <p>They guide you to a freight elevator at the rear of the building. It lurches to life and rattles upward. Fluorescent light hums overhead, bouncing off metal walls.</p>
+    <p>They stand close but do not crowd. That control turns you on.</p>
+    <p>“Name?” you ask.</p>
+    <p>They tell you. “And you?”</p>
+    <p>You share yours. They repeat it softly, like rolling a new flavor around their tongue.</p>
+    <p>Elevator stops. Doors slide open to a half-finished loft. Exposed brick, paint cans, a few large canvases leaning against a wall. No one else. Just quiet.</p>
+    <p>“Friend lets me use this place to think,” they say. “Sometimes to play.”</p>
+    <p>You arch a brow. “What kind of play?”</p>
+    <p>They step closer until your breaths mingle. “The kind you’re hoping for.”</p>
+    <p>Heat pricks under your collar. You like their patience. They are asking without begging.</p>
+    <p>“I’m listening,” you say.</p>
+    <p>They slip a finger under your chin, tilt it up just enough. “I give. You receive. Then you flip it on me. We trade until we can’t talk anymore.”</p>
+    <p>A thrill shakes your thighs. You nod.</p>
+    <p>They kiss you, softly but quickly pull back. Testing you. You chase their mouth back, add tongue, catch their lower lip. They push you against a support column, hands sliding under your jacket, tracing your waist.</p>
+    <p>Clothes peel away in stages. Shirt, jacket, belt. Each layer gone earns a fresh kiss. Their hands explore without hesitation but with clear intent, checking every intake of breath, every shift of muscle.</p>
+    <p>Soon you are half naked, back pressed to cool brick. Their mouth trails your throat. Warm lips, a bare scrape of teeth. You gasp. Your hands find their hair, guiding them lower.</p>
+    <p>You sink to your knees.</p>
+    <p>“Tell me what you like,” you say, voice muffled by your stomach.</p>
+    <p>“Use your mouth.”</p>
+    <p>You do. Tongue slides along sensitive skin. You find a rhythm that pulls a moan straight from their lungs.</p>
+    <p>You give them everything they want, and more.</p>
+    <p>When they moan and start writhing in pleasure you feel yourself getting more turned on.</p>
+    <p>Pleasure pulsates through them and then through you. They cry out, knees almost buckling. You moan just a little, licking lazily until aftershocks fade.</p>
+    <p>They pull you up. Your lips shine. They kiss you.</p>
+    <p>“My turn,” they say against your mouth.</p>
+    <p>They spin you, back to the column now. Drop to their knees, hands working your zipper.</p>
+    <p>Now you can’t control the waves of pleasure crashing and rising again. They set the pace. You give in completely now. Your hips jerk.</p>
+    <p>They look at you, knowing they’re in total control now. “You want more?” they ask.</p>
+    <p>“Please,” you whisper.</p>
+    <p>They grin and start giving back, reciprocating the pleasure you just gave them. Your body hums and you feel your pulse jump. You try to warn them, your voice breaking, but they don’t stop. Not until your whole body is trembling from pleasure.</p>
+    <p>Your eyes are glassy, mouth agape.</p>
+    <p>They stand back up and pull you into a kiss.</p>
+    <p>Both half naked, you stumble to a paint-splattered chaise. They sit, pull you onto their lap, bodies sliding together. You rock against each other, slick heat meeting firm need. Hands roam, breaths escalating and accelerating.</p>
+    <p>You both groan. Pace unhurried, grinding more than thrusting. Their hands roam your back, your hips, your chest.</p>
+    <p>You lean forward, kiss along their jaw. “Harder?”</p>
+    <p>“You first.”</p>
+    <p>You plant feet, drop faster. They meet your thrusts, hips snapping up. Sweat slicks both bodies. You cling to their shoulders, panting into their ear.</p>
+    <p>You collapse against them. Heartbeats thunder. Hands stroke lazily over damp skin.</p>
+    <p>Minutes pass.</p>
+    <p>They kiss your temple. “Still standing?”</p>
+    <p>“Barely.”</p>
+    <p>They laugh, rich and soft.</p>
+    <p>You dress slowly, sharing small touches, zipping each other up. No rush.</p>
+    <p>Back at the freight elevator, they pin you with a look. “You give better than anyone I’ve met.”</p>
+    <p>“Same,” you say. “I could give again.”</p>
+    <p>They grin. “I’m going to take you up on that offer.”</p>
+    <p>You step into the lift together, lips meeting once more as the doors rattle shut.</p>
+    <p>You came tonight with too much to give.</p>
+    <p>Looks like you found someone hungry enough to keep taking, and generous enough to give it all back.</p>
+  </div>
+</body>
+</html>
